<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.0">
  <DUT Name="ST_ReadListData_Array" Id="{1745a3a2-70fa-4aa5-9950-79e4b7b5d76e}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ReadListData_Array :
STRUCT
	stReadListReturnInfo	: ARRAY [1..2] OF ST_UAReadListReturnInfo;
	iArrayIntVar1 			: ARRAY[0..9] OF INT;
	iArrayIntVar2 			: ARRAY[0..11] OF INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>